--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
-
+  intl: ^0.16.1
+  sembast: ^2.4.10+4
+  path_provider: ^1.6.28
+  path: ^1.7.0
   google_fonts: ^2.1.0
   flutter_svg: ^0.22.0
   fl_chart: ^0.36.1
   provider: ^5.0.0
   data_table_2: ^2.0.3
+
 
 dev_dependencies:
   flutter_test:
