--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   intl: ^0.16.1
-  sembast: ^2.4.10+4
-  path_provider: ^1.6.28
-  path: ^1.7.0
+  sembast: ^3.1.1
+  path_provider: ^2.0.5
+  path: ^1.8.0
   google_fonts: ^2.1.0
   flutter_svg: ^0.22.0
   fl_chart: ^0.36.1
